ingress-nginx/config/samples/addons_v1alpha1_ingressnginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
spec: {}
