ingress-nginx/config/samples/ingress_example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-example
spec: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
  namespace: ingress-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: main

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
  namespace: ingress-example
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  namespace: ingress-example
spec:
  defaultBackend:
    service:
      name: hello
      port:
        number: 8080
